# bassovac

./: CMakeLists.txt  PackageInfo.cmake  README  basovac.pl
cmake/: BuildDeps.cmake
debian/: postinst.in  prerm.in
integration-test/: CMakeLists.txt  TestExpected.py  integration.py
integration-test/data/: expected.out  n.bam  t.bam
perl/: dnmt3a-fasttest.pl
perl/Statistics/: Bassovac.pm
src/exe/bassovac/: BassovacApp.cpp  BassovacApp.hpp  CMakeLists.txt  main.cpp
src/lib/bvprob/: Bassovac.cpp  Bassovac.hpp  CMakeLists.txt  Fasta.cpp  FastaReader.hpp  PBin.cpp  PBin.hpp  ResultFormatter.cpp  ResultFormatter.hpp  Sample.cpp  Sample.hpp  Tokenizer.hpp
src/lib/io/: BamEntry.cpp  BamEntry.hpp  BamFilter.hpp  BamIntersector.cpp  BamIntersector.hpp  BamReader.hpp  BamReaderBase.cpp  BamReaderBase.hpp  CMakeLists.txt  CigarParser.cpp  CigarParser.hpp  Pileup.cpp  Pileup.hpp  PileupBuffer.cpp  PileupBuffer.hpp  RegionLimitedBamReader.hpp  SamConvert.cpp  SamConvert.hpp
src/lib/utility/: Binomial.cpp  Binomial.hpp  CMakeLists.txt  CountingSort.hpp  Lut.cpp  Lut.hpp  TempFile.hpp
test/lib/bvprob/: CMakeLists.txt  TestBassovac.cpp  TestExpectedResult.cpp  TestFastaReader.cpp  TestPBin.cpp  TestSample.cpp
test/lib/io/: CMakeLists.txt  TestBamEntry.cpp  TestBamIntersector.cpp  TestBamReader.cpp  TestCigarParser.cpp  TestPileup.cpp  TestPileupBuffer.cpp
test/lib/utility/: CMakeLists.txt  TestBinomial.cpp  TestCountingSort.cpp  TestLut.cpp  pdfConvolve2.R
